--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <li><a href="#services" data-after="Service">Certificate</a></li>
               <!--<li><a href="#galery-val" data-after="Galery">BestSupp</a></li> -->
               <li><a href="#projects" data-after="Projects">Projects</a></li>
+              <li><a href="#project-testing" data-after="project-testing">Projects</a></li>
               <li><a href="#about" data-after="About">About</a></li>
               <li><a href="#contact" data-after="Contact">Contact</a></li>
             </ul>
@@ -242,7 +243,8 @@
 					dan berkolaborasi dengan orang lain secara real-time.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="https://i.ibb.co.com/0Rq7MWKP/Screenshot-200.png" 
+			alt="Screenshot-200" border="0">
           </div>
         </div>
 		<!--
@@ -282,6 +284,154 @@
             <img src="./img/img-1.png" alt="img">
           </div>
         </div> -->
+        </div>
+      </div>
+    </section>
+    <!-- End Projects Section -->
+	
+    <!-- End Projects Section -->
+	<section id="project-testing">
+      <div class="services container">
+        <div class="service-top">
+          <h1 class="section-title">tes<span>i</span>ting <span>pro</span>ject</h1>
+        </div>
+        <div class="service-bottom">
+          <div class="service-item">
+            <div class="icon">
+               <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              />
+            </div>
+            <a
+              href="https://ryuuzenvs.github.io/FlowerVall/"
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">https://ryuuzenvs.github.io/FlowerVall/</h3></a
+			
+            >
+          </div>
+          <div class="service-item">
+            <div class="icon">
+               <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              /> 
+            </div>
+            <a
+              href="https://ryuuzenvs.github.io/love5Putt/"
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">https://ryuuzenvs.github.io/love5Putt/</h3></a
+            >
+          </div>
+          <div class="service-item">
+            <div class="icon">
+               <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              /> 
+            </div>
+            <a
+              href="https://ryuuzenvs.github.io/Love3forVal/"
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">https://ryuuzenvs.github.io/Love3forVal/</h3></a
+            >
+          </div>
+          <div class="service-item">
+            <div class="icon">
+              <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              />
+            </div>
+            <a
+              href="
+			  https://ryuuzenvs.github.io/engineValue2Variable/
+			  "
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">https://ryuuzenvs.github.io/engineValue2Variable/</h3></a
+            >
+          </div>
+		  <div class="service-item">
+            <div class="icon">
+              <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              />
+            </div>
+            <a
+              href="
+			  https://ryuuzenvs.github.io/loveLetterVal/
+			  "
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">https://ryuuzenvs.github.io/loveLetterVal/</h3></a
+            >
+          </div>
+		  <div class="service-item">
+            <div class="icon">
+              <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              />
+            </div>
+            <a
+              href="
+https://ryuuzenvs.github.io/love10ForPut/
+"
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">https://ryuuzenvs.github.io/love10ForPut/</h3></a
+            >
+          </div>
+		  <div class="service-item">
+            <div class="icon">
+              <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              />
+            </div>
+            <a
+              href="
+https://ryuuzenvs.github.io/3dLovePutt/
+"
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">
+			  https://ryuuzenvs.github.io/3dLovePutt/
+			  </h3></a
+            >
+          </div>
+		  <div class="service-item">
+            <div class="icon">
+              <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              />
+            </div>
+            <a
+              href="
+https://ryuuzenvs.github.io/fireworksPut/
+"
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">
+			  https://ryuuzenvs.github.io/fireworksPut/
+			  </h3></a
+            >
+          </div>
+		  <div class="service-item">
+            <div class="icon">
+              <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              />
+            </div>
+            <a
+              href="
+https://ryuuzenvs.github.io/WebChekNilaiRaportRyuuzenvs/
+"
+              class="pdfSertifikat"
+              target="_blank"
+              ><h3 class="pembuatLink">
+			  https://ryuuzenvs.github.io/WebChekNilaiRaportRyuuzenvs/
+			  </h3></a
+            >
+          </div>
         </div>
       </div>
     </section>
