--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />q
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="img/ppWebPorto.png" type="image/x-icon" />
@@ -573,6 +573,7 @@ https://ryuuzenvs.github.io/WebChekNilaiRaportRyuuzenvs/
     <script src="./app.js"></script>
   </body>
 </html>
+
 
 
 
